[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/KalindisBlurred.png" type="Texture" id=1]
[ext_resource path="res://UI/KalindisPlay.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://UI/world of water.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/KalindisLogo.png" type="Texture" id=5]
[ext_resource path="res://UI/KalindisOptions.png" type="Texture" id=6]
[ext_resource path="res://UI/KalindisShop.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="KalindisBlurred" type="Sprite" parent="."]
position = Vector2( 296, 598 )
texture = ExtResource( 1 )

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -251.0
margin_top = -140.0
margin_right = 238.0
margin_bottom = 227.0
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Guidedmode" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 573.0
margin_top = -201.0
margin_right = 1176.0
margin_bottom = -78.0
custom_fonts/font = SubResource( 1 )
text = "GUIDED MODE"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 641.0
margin_top = -33.0
margin_right = 1145.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
text = "TUTORIAL"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="Button" parent="."]
margin_left = 387.0
margin_top = 1015.0
margin_right = 593.0
margin_bottom = 1195.0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="."]
margin_left = 2.0
margin_top = 1001.0
margin_right = 223.0
margin_bottom = 1195.0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KalindisLogo" type="Sprite" parent="."]
position = Vector2( 296, 600 )
texture = ExtResource( 5 )
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Guidedmode" to="." method="_on_Guidedmode_pressed"]
[connection signal="pressed" from="Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
